# HOLON_CloudClient

./: .gitignore  ETM_costs.npy  ETM_production_data.npy  README.md  __validate.py  case_energy_hub.py  case_energy_hub_100pct_eTrucks.py  case_energy_hub_100pct_eTrucks_nfATO_SharedBattery_MoreWindPV_Holon.py  case_energy_hub_100pct_eTrucks_nfATO_SharedBattery_MoreWindPV_Holon_Financial.py  case_energy_hub_100pct_eTrucks_nfATO_individualBattery.py  case_energy_hub_100pct_eTrucks_nfATO_individualBattery_WindPV.py  case_energy_hub_100pct_eTrucks_nfATO_individualBattery_WindPVCurtailer.py  case_energy_hub_50pct_eTrucks.py  case_energy_hub_70pct_eTrucks_nfATO.py  case_energy_hub_eTrucks_windPV.py  case_energy_hub_eTrucks_windPV_battery_fincentive.py  case_energy_hub_eTrucks_windPV_logisticsBatteries.py  case_energy_hub_eTrucks_windPV_sharedBattery.py  case_energy_hub_eTrucks_windPV_windpvBattery.py  case_energy_hub_etrucksBattery_windPV.py  case_energy_hub_final_destination.py  case_energy_hub_holonBatterij_etrucks_windPV.py  case_energy_hub_holonBatterij_etrucks_windPV_electrolyser.py  case_energy_hub_holonBatterij_etrucks_windPV_optimized.py  case_energy_hub_holon_etrucks_wind_battery.py  case_energy_hub_nfATO_70pct_eTrucks.py  case_energy_hub_ref.py  case_energy_hub_ref_old.py  case_energy_hub_step2_PV.py  case_energy_hub_step2a_PV+Wind.py  casus_TVW_scenario.py  example_actors_file_new_contracts.txt  example_actors_file_new_contracts.txt.bak  hourly_co2_intensity_of_electricity_production_kev_beta_2203960.csv  hourly_share_elecricity_from_renewables_kev_beta_2203960.csv  (+6 more)
(+123 files in other folders)
