[project]
name = "cloudclient"
description = "The AnyLogic cloudclient used to interface the HOLON model to the web"
version = "1.0"
dependencies = [
    "pytest",
    "pylint",
    "pyyaml",
    "pydantic",
    "pandas",
    "openpyxl",
    "pip",
    "anylogiccloudclient @ https://cloud.anylogic.com/files/api-8.5.0/clients/anylogiccloudclient-8.5.0-py3-none-any.whl#egg=anylogiccloudclient",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cloudclient = ["config/*.yml"]

[project.scripts]
init = "cloudclient.scripts.initiate:create_folder"